--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:recyclerview-v7:26.1.0'
+
+    compile 'com.firebase:firebase-jobdispatcher:0.8.5'
 }
 
 
