--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:authorities="@string/content_authority"
             android:exported="false" />
 
-        <activity android:name=".ConfigActivity"></activity>
+        <activity android:name=".ConfigActivity"/>
     </application>
 
 </manifest>
